added win and lose events, various failed styling experiments. MVP is essentially complete!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script defer src="game.js"></script>
 </head>
 <body>
-    
+    <button id="restart-button">Restart</button>
+    <div class="end-message">
+        <h1 id="game-over"></h1>
+        <h1 id="game-win"></h1>
+    </div>
+        
     <div class="container">
         <div id="text" class="scene-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eligendi error voluptates, dignissimos est nesciunt corrupti earum ut eius, voluptatum non repellendus fugiat aspernatur? Atque cumque quae magni unde esse.</div>
         <div id="choice-btns">
