--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="game.js"></script>
 </head>
 <body>
-    <button id="restart-button">Restart</button>
+    <button id="restart-button" class="button">Restart</button>
     <div class="end-message">
         <h1 id="game-over"></h1>
         <h1 id="game-win"></h1>
