added inventory feature that adds and removes items.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         </div>
 
     </div>
+    <div id="backpack">
+        <h3>Backpack</h3>
+        <ul id="inventory"></ul>
+    </div>
 </body>
 </html>
