Final styling, and a few scenes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <button id="restart-button" class="button">Restart</button>
-    <div class="end-message">
+    <!-- <div id="end-message">
         <h1 id="game-over"></h1>
         <h1 id="game-win"></h1>
-    </div>
+    </div> -->
         
     <div class="container">
         <div id="text" class="scene-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eligendi error voluptates, dignissimos est nesciunt corrupti earum ut eius, voluptatum non repellendus fugiat aspernatur? Atque cumque quae magni unde esse.</div>
@@ -27,7 +27,7 @@
 
     </div>
     <div id="backpack">
-        <h3>Backpack</h3>
+        <h2>Backpack</h2>
         <ul id="inventory"></ul>
     </div>
 </body>
